--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,3 +97,12 @@ body{
     box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.25);
     color: #0032E2;
 }
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+body{
+    max-width: 100%;
+}
+}
