--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,10 +99,11 @@ body{
 }
 
 @media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-body{
-    max-width: 100%;
-}
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+    body{
+        max-width: 100%;
+        width: 100%;
+    }
 }
